# ChessOnline

./: CMakeLists.txt  zamysl.txt
Client/: CMakeLists.txt
Client/include/: Client.hpp
Client/src/: Client.cpp  main.cpp
Server/: CMakeLists.txt
Server/include/: Game.hpp  Server.hpp  ServerStructs.h
Server/src/: Game.cpp  Server.cpp  main.cpp
Shared/: CMakeLists.txt  config.json  run.out
Shared/include/: bishop.hpp  board.hpp  common.hpp  config.hpp  custom_structs.hpp  figure.hpp  gui.hpp  king.hpp  knight.hpp  pawn.hpp  queen.hpp  rook.hpp
Shared/src/: bishop.cpp  board.cpp  common.cpp  config.cpp  figure.cpp  gui.cpp  king.cpp  knight.cpp  main.cpp  pawn.cpp  queen.cpp  rook.cpp
